[project]
name = "load-balancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "loguru>=0.7.2",
    "streamlit>=1.39.0",
    "fire>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/load_balancer"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
